--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
     app: {{ include "cloudflare-ddns.name" . }}
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type }}
   ports:
-    - port: 80
-      targetPort: 80
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.targetPort }}
   selector:
     app: {{ include "cloudflare-ddns.name" . }}
