--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -4,10 +4,11 @@ metadata:
   name: {{ include "cloudflare-ddns.fullname" . }}
   labels:
     app: {{ include "cloudflare-ddns.name" . }}
-spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: {{ .Values.service.targetPort }}
+# I dont believe the below is needed.  I had grabbed some defaults I saw in the helm howto page, but this doesn't need ingress.
+# spec:
+#   type: {{ .Values.service.type }}
+#   ports:
+#     - port: {{ .Values.service.port }}
+#       targetPort: {{ .Values.service.targetPort }}
   selector:
     app: {{ include "cloudflare-ddns.name" . }}
