figured it out.  set the clusterIP to none.  no more port requirements.

--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -5,8 +5,6 @@ metadata:
   labels:
     app: {{ include "cloudflare-ddns.name" . }}
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
+  clusterIP: None
   selector:
     app: {{ include "cloudflare-ddns.name" . }}
